feat(database): integrate TypeORM with PostgreSQL for membership database
- Added TypeOrmModule to app.module.ts for database connection.
- Updated envs.ts to include MEMBERSHIP_DATABASE_URL for database URI.
- Created database.config.ts to define TypeORM configuration using environment variables.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 NATS_SERVERS = nats://localhost:4222
 PORT = 3005
 NODE_ENV = development
+MEMBERSHIP_DATABASE_URL = postgres://admin:password@localhost:5433/membership_db
